@@ -11,7 +11,8 @@
                 Dennis Kaarsemaker,
                 Kumar Appaiah <akumar@ee.iitm.ac.in>,
                 Varun Hiremath <varunhiremath@gmail.com>,
-                Jeremy Thurgood.
+                Jeremy Thurgood,
+                Max Battcher.
     :license: BSD, see LICENSE for more details.
 """
 
@@ -26,14 +27,15 @@ from pygments.lexer import RegexLexer, bygroups, include, using, this, \
      do_insertions
 from pygments.token import Punctuation, \
     Text, Comment, Keyword, Name, String, Generic, Operator, Number, \
-    Whitespace
+    Whitespace, Literal
 from pygments.util import get_bool_opt
 
 
 __all__ = ['IniLexer', 'SourcesListLexer', 'MakefileLexer', 'DiffLexer',
            'IrcLogsLexer', 'TexLexer', 'GroffLexer', 'ApacheConfLexer',
            'BBCodeLexer', 'MoinWikiLexer', 'RstLexer', 'VimLexer',
-           'GettextLexer', 'SquidConfLexer', 'DebianControlLexer']
+           'GettextLexer', 'SquidConfLexer', 'DebianControlLexer',
+           'DarcsPatchLexer']
 
 
 class IniLexer(RegexLexer):
@@ -196,6 +198,44 @@ class DiffLexer(RegexLexer):
             return True
         if text[:4] == '--- ':
             return 0.9
+
+
+class DarcsPatchLexer(RegexLexer):
+    """
+    DarcsPatchLexer is a lexer for the various versions of the darcs patch
+    format.  Examples of this format are derived by commands such as
+    ``darcs annotate --patch`` and ``darcs send``.
+
+    *New in Pygments 1.0.*
+    """
+    name = 'Darcs Patch'
+    aliases = ['dpatch']
+    filenames = ['*.dpatch', '*.darcspatch']
+
+    tokens = {
+        'root': [
+            (r'<', Operator),
+            (r'>', Operator),
+            (r'{', Operator, 'patch'),
+            (r'(\[)((?:TAG )?)(.*)(\n)(.*)(\*\*)(\d+)(\s?)', bygroups(Operator, Keyword, Name, Text,
+                Name, Operator, Literal.Date, Text), 'comment'),
+            (r'New patches:', Generic.Heading),
+            (r'Context:', Generic.Heading),
+            (r'Patch bundle hash:', Generic.Heading),
+            (r'\s+|\w+', Text),
+        ],
+        'comment': [
+            (r' .*\n', Comment),
+            (r'\]', Operator, "#pop"),
+        ],
+        'patch': [
+            (r'}', Operator, "#pop"),
+            (r'(\w+)(.*\n)', bygroups(Keyword, Text)),
+            (r'\+.*\n', Generic.Inserted),
+            (r'-.*\n', Generic.Deleted),
+            (r'.*\n', Text),
+        ],
+    }
 
 
 class IrcLogsLexer(RegexLexer):
